bugfixes and introducing graphs
bugfixes in Simplicial_Complex.h namely with the definition of
quotient.

Points are now kept in a vector rather then a list, so that we can do
__.at(__) calls.

trace.h contains a simple facility to handle gps traces

utils.h contains a facility to output the 1-skelleton of a simplicial
complex (needed for snapping traces to the complex)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,17 @@ cmake_minimum_required(VERSION 2.8)
 project(simplicial CXX)
 
 
-# requirements: CHANGE HERE!!!
+# requirements: CHANGE LOCATIONS HERE!!!
 #   * Gudhi
-include_directories("./lib")
 #   * Eigen3
 set(EIGEN3_INCLUDE_DIR "/usr/include/eigen3")
 include_directories(${EIGEN3_INCLUDE_DIR})
+#   * boost
 # end requirementes
 
+# header files
+
+include_directories("./lib")
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
 set(STUPID_SOURCES "./src/main.cpp")
@@ -17,3 +20,6 @@ add_executable(my_stupid_test ${STUPID_SOURCES})
 
 set(OTHER_STUPID_SOURCES "./src/libtest.cpp")
 add_executable(my_other_stupid_test ${OTHER_STUPID_SOURCES})
+
+set(YOTHER_STUPID_SOURCES "./src/graphtest.cpp")
+add_executable(yother_stupid_test ${YOTHER_STUPID_SOURCES})
