--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ project(simplicial CXX)
 #   * boost under /usr/include/boost
 #   * CGAL under /usr/include/CGAL
 #
-set(EIGEN3_INCLUDE_DIR "/usr/include/eigen3")
+set(EIGEN3_INCLUDE_DIR "/usr/local/include/eigen3")
 include_directories(${EIGEN3_INCLUDE_DIR})
 set(CGAL_INCLUDE_DIR "/usr/local/include")
 include_directories(${CGAL_INCLUDE_DIR})
