--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,62 +1,28 @@
 cmake_minimum_required(VERSION 2.8)
 project(coefficient-flow CXX)
 
-# requirements:
-#   * Gudhi under /usr/include/gudhi
-#   * Eigen3 under /usr/include/eigen3
-#   * boost under /usr/include/boost
-#   * CGAL under /usr/include/CGAL
-#   * libyaml under /usr/local/include/libyaml
-#   * pcl 1.8 under /usr/include/pcl-1.8
-#
-
-# in case Eigen, and/or CGAL, and/or GUDHI are not found by find_package
-# try setting the paths to them manually
-#
-# set(EIGEN3_INCLUDE_DIR "/usr/local/include/eigen3")
-# include_directories(${EIGEN3_INCLUDE_DIR})
-# set(CGAL_INCLUDE_DIR "/usr/local/include/eigen3")
-# include_directories(${CGAL_INCLUDE_DIR})
-#
-
-# GUDHI version should be 1.3 or higher, provided they don't break the
-# SimplexTree interface
-#
-# libyaml-cpp this should actually be found in "/usr/include" so there is no
-# real need for the find_package, but it's always nice to make sure
-#
-# pcl-1.8 version 1.7 doesn't let one read ply files into meshes which is
-# rather strange, but it is a thing.
-#
-
 find_package(Boost REQUIRED QUIET)
-# message(STATUS "Boost version: ${BOOST_VERSION}")
-# message(STATUS "Boost directory: ${BOOST_INCLUDE_DIRS}")
 
 find_package(Eigen3 3.1.2 REQUIRED QUIET)
-# message(STATUS "Eigen3 version: ${EIGEN3_VERSION}")
-# message(STATUS "Eigen3 directory: ${EIGEN3_INCLUDE_DIR}")
 include_directories(${EIGEN3_INCLUDE_DIR})
 
 find_package(CGAL REQUIRED QUIET)
-message(STATUS "CGAL version: ${CGAL_VERSION}")
-message(STATUS "CGAL directory: ${CGAL_INCLUDE_DIRS}")
+include(${CGAL_USE_FILE})
 
 find_package(yaml-cpp REQUIRED QUIET)
-# message(STATUS "yaml-cpp version: ${YAML_CPP_VERSION}")
-# message(STATUS "yaml-cpp directory: ${YAML_CPP_INCLUDE_DIR}")
 include_directories(${YAML_CPP_INCLUDE_DIR})
 
-find_package(PCL 1.8 REQUIRED QUIET)
-# message(STATUS "PCL version: ${PCL_VERSION}")
-# message(STATUS "PCL directory: ${PCL_INCLUDE_DIRS}")
-include_directories(${PCL_INCLUDE_DIRS})
+#find_package(PCL 1.8 REQUIRED QUIET)
+#include_directories(${PCL_INCLUDE_DIRS})
 
-find_package(GUDHI 1.3 REQUIRED QUIET)
-# message(STATUS "Gudhi version: ${GUDHI_VERSION}")
-# message(STATUS "Gudhi directory: ${GUDHI_INCLUDE_DIRS}")
+find_package(GUDHI REQUIRED QUIET)
+# definitions for GUDHI in case it is only locally compiled and not installed
+if(NOT DEFINED(${GUDHI_INCLUDE_DIR}))
+set(GUDHI_INCLUDE_DIR "${GUDHI_DIR}/include")
+endif()
+include_directories(${GUDHI_INCLUDE_DIR})
 
-set(CMAKE_CXX_COMPILER             "/usr/bin/clang++-3.8")
+set(CMAKE_CXX_COMPILER             "/usr/bin/clang++")
 set(CMAKE_CXX_FLAGS                " -std=c++11 -Wall")
 set(CMAKE_CXX_FLAGS_DEBUG          "-g")
 set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
@@ -69,47 +35,46 @@ set(CMAKE_NM      "/usr/bin/llvm-nm")
 set(CMAKE_OBJDUMP "/usr/bin/llvm-objdump")
 set(CMAKE_RANLIB  "/usr/bin/llvm-ranlib")
 
-set(CMAKE_BUILD_TYPE Debug)
-# set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE DEBUG)
+# set(CMAKE_BUILD_TYPE RELEASE)
 
 include_directories("./lib") # where all the library files are
 
-add_library(scomplex SHARED "./lib/scomplex/simplicial_complex.cpp")
+add_library(scomplex SHARED "./lib/SimpComplex.cpp")
 
-set_source_files_properties("lib/scomplex/path_snapper.cpp" PROPERTIES COMPILE_FLAGS -DNDEBUG)
-add_library(pathsnap SHARED "./lib/scomplex/path_snapper.cpp")
-target_link_libraries(pathsnap scomplex ${CGAL_LIBRARY})
+add_library(pathsnap SHARED "./lib/path_snapper.cpp")
+target_link_libraries(pathsnap scomplex CGAL)
 
 add_executable(qhull2ply "src/make_mesh.cpp")
 
-# set_source_files_properties("lib/src/path_snapper.cpp" PROPERTIES COMPILE_FLAGS -DNDEBUG)
-add_executable(yamltest "src/testing_facility.cpp")
-target_link_libraries(yamltest yaml-cpp scomplex pathsnap ${PCL_LIBRARIES})
-
-# message(INFO ${CMAKE_CURRENT_SOURCE_DIR})
-# message(INFO ${CMAKE_CURRENT_BINARY_DIR})
-# TEST target
 add_custom_target(timing_test
     COMMAND "cp" "${CMAKE_CURRENT_SOURCE_DIR}/test/run_dumb_tests.sh" "${CMAKE_CURRENT_BINARY_DIR}"
     COMMAND "cp" "${CMAKE_CURRENT_SOURCE_DIR}/test/dumbexample.yaml" "${CMAKE_CURRENT_BINARY_DIR}"
     COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run_dumb_tests.sh" "1"
     DEPENDS yamltest qhull2ply "test/run_dumb_tests.sh" "test/dumbexample.yaml")
 
-add_library(quotient SHARED "./lib/scomplex/quotient.cpp")
+add_custom_target(tags
+    COMMAND "cp" "${CMAKE_CURRENT_SOURCE_DIR}/base_tags" "${CMAKE_CURRENT_SOURCE_DIR}/tags"
+    COMMAND "ctags" "-R" "-a" "${CMAKE_CURRENT_SOURCE_DIR}/tags" "${CMAKE_CURRENT_SOURCE_DIR}")
+
+add_custom_target(all_tags
+    COMMAND "ctags" "-R" "-f" "${CMAKE_CURRENT_SOURCE_DIR}/base_tags" "/usr/include"
+    COMMAND "ctags" "-R" "-a" "${CMAKE_CURRENT_SOURCE_DIR}/base_tags" "/usr/local/include"
+    COMMAND "cp" "${CMAKE_CURRENT_SOURCE_DIR}/base_tags" "${CMAKE_CURRENT_SOURCE_DIR}/tags"
+    COMMAND "ctags" "-R" "-a" "${CMAKE_CURRENT_SOURCE_DIR}/tags" "${CMAKE_CURRENT_SOURCE_DIR}")
+
+add_library(quotient SHARED "./lib/quotient.cpp")
 target_link_libraries(quotient scomplex)
+
+add_library(boundchain SHARED "./lib/BoundingChain.cpp")
+target_link_libraries(boundchain scomplex)
+
 add_executable(chaintest "src/chaintest.cpp")
 add_executable(exttest "src/exttest.cpp")
 
-# python bindings
-
-find_package(PythonInterp REQUIRED)
-find_package(PythonLibs REQUIRED)
-find_package(Boost REQUIRED COMPONENTS python)
+add_executable(yamltest "src/testing_facility.cpp")
+target_link_libraries(yamltest yaml-cpp scomplex boundchain pathsnap ${PCL_LIBRARIES})
 
 include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} "/usr/include/python2.7/")
-python_add_module(gsimp python/bindings.cpp)
-#set(LINK_LIBS quotient pathsnap )
-#target_compile_options(gsimp PRIVATE -E)
-target_link_libraries(gsimp  "python2.7" "boost_python" ${PYTHON_LIBRARIES} ${CGAL_LIBRARIES} ${CGAL_CORE} ${Boost_LIBRARIES})
-
-
+add_library(gsimp SHARED python/bindings.cpp)
+target_link_libraries(gsimp "python2.7" "boost_python" ${PYTHON_LIBRARIES} scomplex pathsnap quotient ${CGAL_LIBRARIES} ${CGAL_CORE} ${Boost_LIBRARIES} )
