--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,16 +47,25 @@ message(STATUS "yaml-cpp version: ${YAML_CPP_VERSION}")
 message(STATUS "yaml-cpp directory: ${YAML_CPP_INCLUDE_DIR}")
 include_directories(${YAML_CPP_INCLUDE_DIR})
 
-find_package(PCL 1.8 REQUIRED QUIET)
+find_package(PCL 1.8 REQUIRED QUIET COMPONENTS io)
 message(STATUS "PCL version: ${PCL_VERSION}")
 message(STATUS "PCL directory: ${PCL_INCLUDE_DIRS}")
 include_directories(${PCL_INCLUDE_DIRS})
 
 find_package(GUDHI 1.3 REQUIRED QUIET)
 message(STATUS "Gudhi version: ${GUDHI_VERSION}")
-message(STATUS "Gudhi directory: ${GUDHI_INCLUDE_DIRS}")
+string(REGEX MATCH "^/home/" LOCAL_INSTALLED "${GUDHI_DIR}")
+string(COMPARE EQUAL ${LOCAL_INSTALLED} "/home/" LOCAL_INSTALLED)
+if(${LOCAL_INSTALLED})
+    set(GUDHI_INCLUDE_DIR "${GUDHI_DIR}/include")
+    message(STATUS "Gudhi directory: ${GUDHI_INCLUDE_DIR}")
+    include_directories(${GUDHI_INCLUDE_DIR})
+else()
+    message(STATUS "Gudhi directory: ${GUDHI_INCLUDE_DIRS}")
+    include_directories(${GUDHI_INCLUDE_DIRS})
+endif()
 
-set(CMAKE_CXX_COMPILER             "/usr/bin/clang++-3.8")
+set(CMAKE_CXX_COMPILER             "/usr/bin/clang++")
 set(CMAKE_CXX_FLAGS                "-Wall -std=c++11")
 set(CMAKE_CXX_FLAGS_DEBUG          "-g")
 set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
