--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ project(coefficient-flow CXX)
 # rather strange, but it is a thing.
 #
 
-find_package(Boost COMPONENTS python3 REQUIRED QUIET)
+find_package(Boost REQUIRED)
 message(STATUS "Boost version: ${Boost_VERSION}")
 message(STATUS "Boost directory: ${Boost_INCLUDE_DIRS}")
 message(STATUS "boost libraries: ${Boost_LIBRARIES}")
@@ -100,19 +100,42 @@ add_custom_target(timing_test
     COMMAND "${CMAKE_CURRENT_BINARY_DIR}/run_dumb_tests.sh" "1"
     DEPENDS yamltest qhull2ply "test/run_dumb_tests.sh" "test/dumbexample.yaml")
 
+# this compiles it against python 2.7
+#find_package(PythonInterp REQUIRED)
+#find_package(PythonLibs REQUIRED)
+#find_package(Boost REQUIRED COMPONENTS python3)
+
+#set(PYTHON_INCLUDE_DIRS /usr/include/python3.6m )
+#set(PYTHON_LIBRARIES /usr/lib/libpython3.6m.so /usr/lib/libpython3.6m.so.1.0 /usr/lib/libpython3.so)
+
+#include_directories(${PYTHON_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+#link_directories(${Boost_LIBRARY_DIR})
+
+#message(STATUS "python version: ${PYTHON_VERSION} ")
+#message(STATUS "python dirs: ${PYTHON_INCLUDE_DIRS}")
+#message(STATUS "python libs: ${PYTHON_LIBRARIES}")
+#message(STATUS "boost dirs: ${Boost_INCLUDE_DIRS}")
+
+find_package(pybind11 REQUIRED)
+add_library(coeffflow MODULE python/bindings.cpp)
+target_link_libraries(coeffflow PRIVATE scomplex pybind11::module)
+set_target_properties(coeffflow PROPERTIES SUFFIX .so)
+set_target_properties(coeffflow PROPERTIES PREFIX "")
+
+#set_target_properties(coeffflow PROPERTIES SUFFIX .so)
+#set_target_properties(coeffflow PROPERTIES PREFIX "")
+
+#target_link_libraries(coeffflow "python2.7" "boost_python" ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} scomplex)
 
 
-
-
-find_package( PythonLibs 2 REQUIRED)
-include_directories(${PYTHON_INCLUDE_DIRS})
-message(STATUS "python version: ${PYTHON_VERSION} ")
-message(STATUS "python dirs: ${PYTHON_INCLUDE_DIRS}")
-message(STATUS "python libs: ${PYTHON_LIBRARIES}")
-
-add_library(coeffflow SHARED "python/bindings.cpp")
-target_link_libraries(coeffflow ${PYTHON_LIBRARIES} ${Boost_LIBRARIES} scomplex yaml-cpp scomplex pathsnap ${PCL_LIBRARIES})
-
-
-
-
+# This should really work, but it doesnt
+#set(Python_ADDITIONAL_VERSIONS 3.6)
+#find_package(PythonLibs REQUIRED)
+#
+#set(PYTHON_INCLUDE_DIR /usr/include/python3.6m)
+#set(PYTHON_LIBRARY libpython3.6m.so libpython3.6m.so.1.0 libpython3.so)
+#
+#include_directories(${PYTHON_INCLUDE_DIR} ${Boost_INCLUDE_DIRS})
+#python_add_module(coeffflow python/bindings.cpp)
+#target_link_libraries(coeffflow "boost_python3" "python3.6m" ${Boost_LIBRARIES} ${PYTHON_LIBRARY} scomplex)
+#
