corrected CMake to mimic changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,18 +5,14 @@ project(coefficient-flow CXX)
 #   * Gudhi under /usr/include/gudhi
 #   * Eigen3 under /usr/include/eigen3
 #   * boost under /usr/include/boost
-#   * CGAL under /usr/include/CGAL
 #   * libyaml under /usr/local/include/libyaml
-#   * pcl 1.8 under /usr/include/pcl-1.8
 #
 
-# in case Eigen, and/or CGAL, and/or GUDHI are not found by find_package
+# in case Eigen, and/or GUDHI are not found by find_package
 # try setting the paths to them manually
 #
 # set(EIGEN3_INCLUDE_DIR "/usr/local/include/eigen3")
 # include_directories(${EIGEN3_INCLUDE_DIR})
-# set(CGAL_INCLUDE_DIR "/usr/local/include/eigen3")
-# include_directories(${CGAL_INCLUDE_DIR})
 #
 
 # GUDHI version should be 1.3 or higher, provided they don't break the
@@ -25,9 +21,14 @@ project(coefficient-flow CXX)
 # libyaml-cpp this should actually be found in "/usr/include" so there is no
 # real need for the find_package, but it's always nice to make sure
 #
-# pcl-1.8 version 1.7 doesn't let one read ply files into meshes which is
-# rather strange, but it is a thing.
-#
+
+add_subdirectory(KDTree)
+
+add_subdirectory(tinyply)
+include_directories("./tinyply/source/")
+
+add_subdirectory(tinyobjloader)
+include_directories("./tinyobjloader")
 
 find_package(Boost REQUIRED)
 message(STATUS "Boost version: ${Boost_VERSION}")
@@ -39,19 +40,10 @@ message(STATUS "Eigen3 version: ${EIGEN3_VERSION}")
 message(STATUS "Eigen3 directory: ${EIGEN3_INCLUDE_DIR}")
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-find_package(CGAL REQUIRED QUIET)
-message(STATUS "CGAL version: ${CGAL_VERSION}")
-message(STATUS "CGAL directory: ${CGAL_INCLUDE_DIRS}")
-
 find_package(yaml-cpp REQUIRED QUIET)
 message(STATUS "yaml-cpp version: ${YAML_CPP_VERSION}")
 message(STATUS "yaml-cpp directory: ${YAML_CPP_INCLUDE_DIR}")
 include_directories(${YAML_CPP_INCLUDE_DIR})
-
-find_package(PCL 1.8 REQUIRED QUIET COMPONENTS io)
-message(STATUS "PCL version: ${PCL_VERSION}")
-message(STATUS "PCL directory: ${PCL_INCLUDE_DIRS}")
-include_directories(${PCL_INCLUDE_DIRS})
 
 find_package(GUDHI 1.3 REQUIRED QUIET)
 message(STATUS "Gudhi version: ${GUDHI_VERSION}")
@@ -80,16 +72,22 @@ set(CMAKE_OBJDUMP "/usr/bin/llvm-objdump")
 set(CMAKE_RANLIB  "/usr/bin/llvm-ranlib")
 
 set(CMAKE_BUILD_TYPE Release)
+# set(CMAKE_BUILD_TYPE Debug)
 
-include_directories("./lib") # where all the library files are
+include_directories(
+    "./lib" # where all the library files are
+    "KDTree" # for the KDTree library
+    )
+
 
 add_library(scomplex SHARED "./lib/scomplex/simplicial_complex.cpp")
 add_library(pathsnap SHARED "./lib/scomplex/path_snapper.cpp")
+target_link_libraries(pathsnap KDTree)
 
 add_executable(qhull2ply "src/make_mesh.cpp")
 
 add_executable(yamltest "src/testing_facility.cpp")
-target_link_libraries(yamltest yaml-cpp scomplex pathsnap ${PCL_LIBRARIES})
+target_link_libraries(yamltest yaml-cpp scomplex pathsnap tinyply tinyobjloader)
 
 message(INFO ${CMAKE_CURRENT_SOURCE_DIR})
 message(INFO ${CMAKE_CURRENT_BINARY_DIR})
